Rename, pass in task def and arn

--- a/stacks/container-apps/scheduled-task.yml
+++ b/stacks/container-apps/scheduled-task.yml
@@ -1,7 +1,7 @@
-# stacks/container-apps/web-application.yml
+# stacks/container-apps/scheduled-task.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
-  Docker application with scheduled worker task
+  Docker application with scheduled task based on passed in ECS task definition
 Parameters:
   # ECS Cluster ################################################################
   ECSCluster:
