Add outpot for worker task def arn

--- a/stacks/container-apps/web-application.yml
+++ b/stacks/container-apps/web-application.yml
@@ -308,6 +308,9 @@ Resources:
       DesiredCount: !If [CreateProductionResources, !Ref DesiredWorkersProduction, !Ref DesiredWorkers]
       TaskDefinition: !Ref WorkerTaskDefinition
 Outputs:
+  WorkerTaskDefinitionArn:
+    Description: Arn for the worker task, useful for scheduling
+    Value: !Ref WorkerTaskDefinition
   HostedZoneDNSName:
     Description: Convenience domain name for the ALB in a hosted zone
     Value: !Sub |
