--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -289,6 +289,7 @@ Resources:
       TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "web-application.yml"]]
       TimeoutInMinutes: 5
   RemixStack:
+    Condition: IsStaging
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
@@ -334,6 +335,7 @@ Resources:
       TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "web-application.yml"]]
       TimeoutInMinutes: 5
   RemixScheduledTaskStack:
+    Condition: IsStaging
     Type: "AWS::CloudFormation::Stack"
     Properties:
       NotificationARNs:
