--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -345,7 +345,7 @@ Resources:
       Parameters:
         ECSCluster: !Ref ECSCluster
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
-        ScheduleCommand: "[\"load_episodes\"]"
+        ScheduleCommand: '["load_episodes"]'
         ScheduleExpression: "rate(1 hour)"
         ScheduleTaskDefinitionName: "remix-worker"
         ScheduleTaskDefinitionArn: !GetAtt RemixStack.Outputs.WorkerTaskDefinition
