Get the worker task def name from stack outputs

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -335,7 +335,6 @@ Resources:
       TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "web-application.yml"]]
       TimeoutInMinutes: 5
   RemixScheduledTaskStack:
-    DependsOn: RemixStack
     Condition: IsStaging
     Type: "AWS::CloudFormation::Stack"
     Properties:
@@ -347,8 +346,8 @@ Resources:
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
         ScheduleCommand: '["load_episodes"]'
         ScheduleExpression: "rate(1 hour)"
-        ScheduleTaskDefinitionName: "remix-worker"
-        ScheduleTaskDefinitionArn: !GetAtt RemixStack.Outputs.WorkerTaskDefinition
+        ScheduleTaskDefinitionName: !GetAtt RemixStack.Outputs.WorkerTaskDefinitionName
+        ScheduleTaskDefinitionArn: !GetAtt RemixStack.Outputs.WorkerTaskDefinitionArn
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
