--- a/stacks/container-apps/web-application.yml
+++ b/stacks/container-apps/web-application.yml
@@ -309,8 +309,11 @@ Resources:
       TaskDefinition: !Ref WorkerTaskDefinition
 Outputs:
   WorkerTaskDefinitionArn:
-    Description: Arn for the worker task, useful for scheduling
+    Description: Arn for the worker task definition
     Value: !Ref WorkerTaskDefinition
+  WorkerTaskDefinitionName:
+    Description: Name of the worker task definition
+    Value: !Sub ${AppName}-worker
   HostedZoneDNSName:
     Description: Convenience domain name for the ALB in a hosted zone
     Value: !Sub |
