--- a/db/postgresql-instance.yml
+++ b/db/postgresql-instance.yml
@@ -31,7 +31,7 @@ Parameters:
     MinLength: 1
     MaxLength: 16
     AllowedPattern: ^[a-zA-Z][a-zA-Z0-9_]*$
-    ConstraintDescription: must begin with a letter and contain only alphanumeric characters.
+    ConstraintDescription: must begin with a letter and contain only alphanumeric characters or underscore.
   DBPassword:
     NoEcho: true
     Description: The database admin account password
