--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -32,6 +32,10 @@ Parameters:
     Type: String
     Default: ""
   # Application Specific
+  AuguryEcrImageTag:
+    Type: String
+  AugurySecretsVersion:
+    Type: String
   MetricsEcrImageTag:
     Type: String
   MetricsSecretsVersion:
@@ -176,6 +180,8 @@ Mappings:
       prefix: 46
     Courier:
       prefix: 50
+    Augury:
+      prefix: 55
 Resources:
   # Root stacks
   StaticSitesRootStack:
@@ -301,6 +307,10 @@ Resources:
         CourierPlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Courier, prefix]
         CourierEcrImageTag: !Ref CourierEcrImageTag
         CourierSecretsVersion: !Ref CourierSecretsVersion
+        # Augury
+        AuguryPlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Augury, prefix]
+        AuguryEcrImageTag: !Ref AuguryEcrImageTag
+        AugurySecretsVersion: !Ref AugurySecretsVersion
         # Jingle
         JinglePlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Jingle, prefix]
         JingleEcrImageTag: !Ref JingleEcrImageTag
