Fixup file name match

--- a/db/postgresql-instance.yml
+++ b/db/postgresql-instance.yml
@@ -1,4 +1,4 @@
-# db/rds-instance.yml
+# db/postgresql-instance.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >-
   AWS CloudFormation RDS Template: Template to create a PostgreSQL RDS instance.
