Clarify what the VPCStack means

--- a/db/postgresql-instance.yml
+++ b/db/postgresql-instance.yml
@@ -67,8 +67,8 @@ Parameters:
     AllowedValues:
       - Staging
       - Production
-  VPCStack:
-    Description: VPC stack to add this cache into
+  VPCStackName:
+    Description: DBInstance will be added to the VPC created by a stack with this name
     Type: String
     Default: DataVPCStack
   CloudWatchWarnDiskSpace:
@@ -115,9 +115,9 @@ Resources:
       DBSubnetGroupDescription: !Ref EnvironmentType
       SubnetIds:
         - Fn::ImportValue:
-            !Sub ${VPCStack}-Subnet1
+            !Sub ${VPCStackName}-Subnet1
         - Fn::ImportValue:
-            !Sub ${VPCStack}-Subnet2
+            !Sub ${VPCStackName}-Subnet2
   MasterDB:
     Type: "AWS::RDS::DBInstance"
     DependsOn: RDSSubnetGroup
