Turn on deletion protection

--- a/db/postgresql-instance.yml
+++ b/db/postgresql-instance.yml
@@ -146,6 +146,7 @@ Resources:
           Value: !Ref AWS::StackId
       DBSubnetGroupName: !Sub Platform-${EnvironmentType}-${AWS::StackName}-db
 #     PubliclyAccessible: true
+      DeletionProtection: true
     DeletionPolicy: Snapshot
   DiskSpaceAlarm:
     Condition: CreateCloudWatchWarnDiskSpace
