add a project tag to db instance

--- a/db/postgresql-instance.yml
+++ b/db/postgresql-instance.yml
@@ -3,6 +3,14 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: >-
   AWS CloudFormation RDS Template: Template to create a PostgreSQL RDS instance.
 Parameters:
+  ProjectTag:
+    Description: >-
+      Overall project signifier, distilled to a single word-tag.
+    Type: String
+    MinLength: 1
+    MaxLength: 256
+    AllowedPattern : ^.+$
+    Default: "ChangeMe"
   DBInstance:
     Default: "name-me"
     Description: >-
@@ -144,6 +152,8 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
+        - Key: "Project"
+          value: !Ref ProjectTag
       DBSubnetGroupName: !Sub Platform-${EnvironmentType}-${AWS::StackName}-db
 #     PubliclyAccessible: true
       DeletionProtection: true
