--- a/db/postgresql-instance.yml
+++ b/db/postgresql-instance.yml
@@ -126,6 +126,15 @@ Resources:
             !Sub ${VPCStackName}-Subnet1
         - Fn::ImportValue:
             !Sub ${VPCStackName}-Subnet2
+      Tags:
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+        - Key: "Project"
+          value: !Ref ProjectTag
   MasterDB:
     Type: "AWS::RDS::DBInstance"
     DependsOn: RDSSubnetGroup
