--- a/db/postgresql-instance.yml
+++ b/db/postgresql-instance.yml
@@ -134,7 +134,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
         - Key: "Project"
-          value: !Ref ProjectTag
+          Value: !Ref ProjectTag
   MasterDB:
     Type: "AWS::RDS::DBInstance"
     DependsOn: RDSSubnetGroup
@@ -162,7 +162,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
         - Key: "Project"
-          value: !Ref ProjectTag
+          Value: !Ref ProjectTag
       DBSubnetGroupName: !Sub Platform-${EnvironmentType}-${AWS::StackName}-db
 #     PubliclyAccessible: true
       DeletionProtection: true
