Format with no strings

--- a/db/postgresql-instance.yml
+++ b/db/postgresql-instance.yml
@@ -133,7 +133,7 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
-        - Key: "Project"
+        - Key: Project
           Value: !Ref ProjectTag
   MasterDB:
     Type: "AWS::RDS::DBInstance"
@@ -161,7 +161,7 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
-        - Key: "Project"
+        - Key: Project
           Value: !Ref ProjectTag
       DBSubnetGroupName: !Sub Platform-${EnvironmentType}-${AWS::StackName}-db
 #     PubliclyAccessible: true
