--- a/db/postgresql-instance.yml
+++ b/db/postgresql-instance.yml
@@ -163,7 +163,7 @@ Resources:
           Value: !Ref AWS::StackId
         - Key: Project
           Value: !Ref ProjectTag
-      DBSubnetGroupName: !Sub Platform-${EnvironmentType}-${AWS::StackName}-db
+      DBSubnetGroupName: !Ref RDSSubnetGroup
 #     PubliclyAccessible: true
       DeletionProtection: true
     DeletionPolicy: Snapshot
