fixup copy paste error

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -190,7 +190,7 @@ Resources:
         PlatformALBListenerPriorityPrefix: !Ref AuguryPlatformALBListenerPriorityPrefix
         EcrImageTag: !Ref AuguryEcrImageTag
         SecretsVersion: !Ref AugurySecretsVersion
-        AppName: "courier"
+        AppName: "augury"
         CreateWorker: "true"
         ContainerPort: "3000"
         HealthCheckPath: "/health_check"
