Fewer kinesis shards; decrease invocations alarm and increase memory

--- a/stacks/analytics-ingest-lambda.yml
+++ b/stacks/analytics-ingest-lambda.yml
@@ -82,7 +82,7 @@ Resources:
           BQ_DOWNLOADS_TABLE: "downloads"
           BQ_PROJECT_ID: "prx-metrics"
       Handler: index.handler
-      MemorySize: 256
+      MemorySize: 384
       Role: !GetAtt AnalyticsLambdaExecutionIAMRole.Arn
       Runtime: nodejs8.10
       Tags:
@@ -107,7 +107,7 @@ Resources:
         Variables:
           PINGBACKS: "true"
       Handler: index.handler
-      MemorySize: 256
+      MemorySize: 384
       Role: !GetAtt AnalyticsLambdaExecutionIAMRole.Arn
       Runtime: nodejs8.10
       Tags:
@@ -203,7 +203,7 @@ Resources:
     Condition: CreateProductionResources
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub "[AnalyticsLambda][BigQuery][Invocations] ${EnvironmentType} < 1500"
+      AlarmName: !Sub "[AnalyticsLambda][BigQuery][Invocations] ${EnvironmentType} too low"
       AlarmActions:
         - !If [CreateProductionResources, !Ref OpsErrorMessagesSnsTopicArn, !Ref OpsWarnMessagesSnsTopicArn]
       InsufficientDataActions:
@@ -218,7 +218,7 @@ Resources:
       Namespace: AWS/Lambda
       Period: 300
       Statistic: Sum
-      Threshold: 1500
+      Threshold: 500
       TreatMissingData: breaching
       Dimensions:
         - Name: FunctionName
