Use cname domain verification for metrics

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -35,7 +35,6 @@ Resources:
         - ResourceRecords:
             - '"status-page-domain-verification=6n18jv5h9b5d"'
             - '"google-site-verification=j5qsGbnU-E37T9lsaAYL1967H0ej6iZAeX_vEWcOA-w"'
-            - '"google-site-verification=F-96usQ_FPuOEjCjkZhDAiomggqeN2exMRqq4rR8P-w"'
             - '"v=spf1 include:servers.mcsv.net include:_spf.invoicesherpa.com include:mail.zendesk.com include:_spf.google.com include:amazonses.com -all"'
           TTL: "300"
           Type: TXT
@@ -97,6 +96,17 @@ Resources:
           TTL: "300"
           Type: TXT
           Name: !Sub zendesk_verification.${Domain}
+  Verification:
+    Type: "AWS::Route53::RecordSetGroup"
+    Properties:
+      Comment: CNAME records for domain verification
+      HostedZoneId: !Ref HostedZone
+      RecordSets:
+        - ResourceRecords:
+            - gv-6ejzc4qvwiyxn7.dv.googlehosted.com.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub lihvrd6fmhem.metrics.${Domain}
   Highwinds:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
