Clean up ESS parameters

--- a/etc/elasticsearch.yml
+++ b/etc/elasticsearch.yml
@@ -15,7 +15,7 @@ Parameters:
     Type: String
     AllowedValues:
       - true
-      - false
+      # - false
   EbsVolumeType:
     Type: String
     AllowedValues:
@@ -23,6 +23,10 @@ Parameters:
       - gp2
   EbsVolumeSize:
     Type: Number
+    Description: >
+      EBS volume size is per node. You can calculate the total cluster size for
+      the Amazon ES domain using the following formula –
+      (number of data nodes) * (EBS volume size).
   ElasticsearchVersion:
     Type: String
     AllowedValues:
