Add remix parameters to the root stack

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -36,6 +36,10 @@ Parameters:
     Type: String
   AugurySecretsVersion:
     Type: String
+  RemixEcrImageTag:
+    Type: String
+  RemixSecretsVersion:
+    Type: String
   MetricsEcrImageTag:
     Type: String
   MetricsSecretsVersion:
@@ -182,6 +186,8 @@ Mappings:
       prefix: 50
     Augury:
       prefix: 55
+    Remix:
+      prefix: 60
 Resources:
   # Root stacks
   StaticSitesRootStack:
@@ -316,6 +322,10 @@ Resources:
         JinglePlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Jingle, prefix]
         JingleEcrImageTag: !Ref JingleEcrImageTag
         JingleSecretsVersion: !Ref JingleSecretsVersion
+        # Remix
+        RemixPlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Remix, prefix]
+        RemixEcrImageTag: !Ref RemixEcrImageTag
+        RemixSecretsVersion: !Ref RemixSecretsVersion
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
