Set the WorkerTaskDefinitionArn to empty string when there is no worker

--- a/stacks/container-apps/web-application.yml
+++ b/stacks/container-apps/web-application.yml
@@ -310,7 +310,7 @@ Resources:
 Outputs:
   WorkerTaskDefinitionArn:
     Description: Arn for the worker task definition
-    Value: !If [CreateWorkerResources, !Ref WorkerTaskDefinition, !Ref "AWS::NoValue"]
+    Value: !If [CreateWorkerResources, !Ref WorkerTaskDefinition, ""]
   WorkerTaskDefinitionName:
     Description: Name of the worker task definition
     Value: !Sub ${AppName}-worker
