Get the ecs cluster arn, pass to containerized apps for creating scheduled tasks

--- a/stacks/container-apps/scheduled-task.yml
+++ b/stacks/container-apps/scheduled-task.yml
@@ -4,7 +4,7 @@ Description: >
   Creates a scheduled task based on a passed in ECS task definition
 Parameters:
   # ECS Cluster ################################################################
-  ECSCluster:
+  ECSClusterArn:
     Type: String
   ECSServiceIAMRole:
     Type: String
@@ -29,7 +29,7 @@ Resources:
         - Id: "ScheduledWorkerTaskDefinitionTarget"
           Input: !Sub '{ "containerOverrides": [ { "name": "${ScheduleTaskDefinitionName}", "command": ${ScheduleCommand} } ] }'
           RoleArn: !Ref ECSServiceIAMRole
-          Arn: !Ref ECSCluster
+          Arn: !Ref ECSClusterArn
           EcsParameters:
             TaskCount: 1
             TaskDefinitionArn: !Ref ScheduleTaskDefinitionArn
