--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -292,6 +292,7 @@ Resources:
         PlatformALBHTTPListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPListenerArn
         PlatformALBHTTPSListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPSListenerArn
         ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
+        ECSClusterArn: !GetAtt ECSClusterStack.Outputs.ECSClusterArn
         ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
         EcrRegion: !Ref EcrRegion
