--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -31,6 +31,8 @@ Parameters:
   # ECS Cluster ################################################################
   ECSCluster:
     Type: String
+  ECSClusterArn:
+    Type: String
   ECSServiceAutoscaleIAMRoleArn:
     Type: String
   ECSServiceIAMRole:
@@ -393,7 +395,7 @@ Resources:
         - Fn::ImportValue:
             !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
-        ECSCluster: !Ref ECSCluster
+        ECSClusterArn: !Ref ECSClusterArn
         ECSServiceIAMRole: !Ref ECSServiceIAMRole
         ScheduleCommand: '["load_episodes"]'
         ScheduleExpression: "rate(1 hour)"
