Get the ecs service IAM role arn, pass to containerized apps for creating scheduled tasks

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -37,6 +37,8 @@ Parameters:
     Type: String
   ECSServiceIAMRole:
     Type: String
+  ECSServiceIAMRoleArn:
+    Type: String
   # App ENV ####################################################################
   EcrRegion:
     Type: String
@@ -396,7 +398,7 @@ Resources:
             !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
         ECSClusterArn: !Ref ECSClusterArn
-        ECSServiceIAMRole: !Ref ECSServiceIAMRole
+        ECSServiceIAMRoleArn: !Ref ECSServiceIAMRoleArn
         ScheduleCommand: '["load_episodes"]'
         ScheduleExpression: "rate(1 hour)"
         ScheduleTaskDefinitionName: !GetAtt RemixStack.Outputs.WorkerTaskDefinitionName
