--- a/stacks/container-apps/scheduled-task.yml
+++ b/stacks/container-apps/scheduled-task.yml
@@ -6,7 +6,7 @@ Parameters:
   # ECS Cluster ################################################################
   ECSClusterArn:
     Type: String
-  ECSServiceIAMRole:
+  ECSServiceIAMRoleArn:
     Type: String
   # Scheduling #################################################################
   ScheduleCommand:
@@ -28,7 +28,7 @@ Resources:
       Targets:
         - Id: "ScheduledWorkerTaskDefinitionTarget"
           Input: !Sub '{ "containerOverrides": [ { "name": "${ScheduleTaskDefinitionName}", "command": ${ScheduleCommand} } ] }'
-          RoleArn: !Ref ECSServiceIAMRole
+          RoleArn: !Ref ECSServiceIAMRoleArn
           Arn: !Ref ECSClusterArn
           EcsParameters:
             TaskCount: 1
