--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -817,3 +817,7 @@ Outputs:
     Description: >
       The resource name of the IAM role used by ECS services
     Value: !Ref ECSServiceIAMRole
+  ECSServiceIAMRoleArn:
+    Description: >
+      The Arn of the IAM role used by ECS services
+    Value: !GetAtt ECSServiceIAMRole.Arn
