--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -295,6 +295,7 @@ Resources:
         ECSClusterArn: !GetAtt ECSClusterStack.Outputs.ECSClusterArn
         ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
+        ECSServiceIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRoleArn
         EcrRegion: !Ref EcrRegion
         SecretsBase:
           Fn::ImportValue:
