Add web ACL ID output

--- a/security/waf-sample.yml
+++ b/security/waf-sample.yml
@@ -85,3 +85,6 @@ Resources:
           PositionalConstraint: STARTS_WITH
           TargetString: mozilla
           TextTransformation: LOWERCASE
+Outputs:
+  WebAclId:
+    Value: !Ref WebAcl
