Remove unnecessary !Ref

--- a/security/waf-sample.yml
+++ b/security/waf-sample.yml
@@ -11,7 +11,7 @@ Resources:
       DefaultAction:
         Type: ALLOW
       MetricName: WebAclMetricName
-      Name: !Ref WebAclName
+      Name: WebAclName
       Rules:
         - Action:
             Type: BLOCK
