Fix single-origin custom error linting error

--- a/cdn/single-origin.yml
+++ b/cdn/single-origin.yml
@@ -32,7 +32,7 @@ Conditions:
   HasCloudFrontLoggingBucket: !Not [!Equals [!Ref CloudFrontLoggingBucket, ""]]
   HasCloudFrontLoggingBucketPrefix: !Not [!Equals [!Ref CloudFrontLoggingBucketPrefix, ""]]
   HasCloudFrontCustom403ErrorResponseCode: !Not [!Equals [!Ref CloudFrontCustom403ErrorResponseCode, ""]]
-  HasCloudFrontCustom403ErrorResponsePagePath: !Not [!Equals [!Ref CloudFrontCustom403ErrorResponsePagePath, ""]]
+  # HasCloudFrontCustom403ErrorResponsePagePath: !Not [!Equals [!Ref CloudFrontCustom403ErrorResponsePagePath, ""]]
   HasAcmCertificateArn: !Not [!Equals [!Ref AcmCertificateArn, ""]]
   HasNoAcmCertificateArn: !Equals [!Ref AcmCertificateArn, ""]
   HasOriginPath: !Not [!Equals [!Ref OriginPath, ""]]
@@ -280,7 +280,7 @@ Resources:
           - ErrorCachingMinTTL: 300
             ErrorCode: 403
             ResponseCode: !If [HasCloudFrontCustom403ErrorResponseCode, !Ref CloudFrontCustom403ErrorResponseCode, !Ref "AWS::NoValue"]
-            ResponsePagePath: !If [HasCloudFrontCustom403ErrorResponsePagePath, !Ref CloudFrontCustom403ErrorResponsePagePath, !Ref "AWS::NoValue"]
+            ResponsePagePath: !If [HasCloudFrontCustom403ErrorResponseCode, !Ref CloudFrontCustom403ErrorResponsePagePath, !Ref "AWS::NoValue"]
         DefaultCacheBehavior:
           AllowedMethods: !Ref CloudFrontAllowedMethods
           CachedMethods: !Ref CloudFrontCachedMethods
