--- a/etc/dovetail-edge-deploy.yml
+++ b/etc/dovetail-edge-deploy.yml
@@ -52,6 +52,27 @@ Parameters:
       The name of the CloudFormation stack that manages the production
       deployment of Dovetail CloudFront distribution
     Type: String
+  StitchLambdaFunctionArn:
+    Description: >
+      e.g., arn:aws:lambda:<region>:<account>:function:<name>:<version>
+    Type: String
+  BytesLambdaFunctionArn:
+    Description: >
+      e.g., arn:aws:lambda:<region>:<account>:function:<name>:<version>
+    Type: String
+  # TODO Clean these up
+  OriginBucket:
+    Type: String
+    Description: eg. prx-dovetail.s3.amazonaws.com
+  OriginPath:
+    Type: String
+    Description: eg. /stitch-production, /stitch-staging
+  DistributionDomain:
+    Type: String
+    Description: eg. dovetail-cdn.prxu.org
+  CertificateArn:
+    Type: String
+    Description: eg. arn:aws:acm:<region>:<account>:certificate/<guid>
 Resources:
   # Pipeline
   PipelineArtifactStore:
@@ -119,6 +140,21 @@ Resources:
       Stages:
         - Name: Source
           Actions:
+            - Name: InfrastructureRepo
+              ActionTypeId:
+                Category: Source
+                Owner: ThirdParty
+                Provider: GitHub
+                Version: "1"
+              Configuration:
+                Owner: PRX
+                Repo: Infrastructure
+                Branch: master
+                OAuthToken: !Ref GitHubToken
+                PollForSourceChanges: false
+              OutputArtifacts:
+                - Name: InfrastructureRepoSourceArtifact
+              RunOrder: 1
             - Name: MetaRepo
               ActionTypeId:
                 Category: Source
@@ -136,10 +172,6 @@ Resources:
               RunOrder: 1
         - Name: Staging
           Actions:
-
-
-
-
             - Name: CreateStagingChangeSet
               ActionTypeId:
                 Category: Deploy
@@ -151,23 +183,36 @@ Resources:
                 Capabilities: CAPABILITY_IAM
                 ChangeSetName: !Sub ${AWS::StackName}StagingChangeSet
                 RoleArn: !GetAtt CloudFormationIamRole.Arn
-                StackName: !Sub ${AWS::StackName}-root-staging
-                # ParameterOverrides: !Sub |
-                #   {
-                #     "InfrastructureStorageStackName": "${InfrastructureStorageStackName}",
-                #     "NotificationsStackName": "${InfrastructureNotificationsStackName}",
-                #     "SecretsStackName": "${SecretsStackName}",
-                #     "InfrastructureGitCommit": { "Fn::GetParam" : ["RepoStateArtifact", "state.json", "commit"]},
-                #     "PipelineExecutionNonce": { "Fn::GetArtifactAtt" : ["InfrastructureRepoSourceArtifact", "ObjectKey"]}
-                #   }
-                # TemplateConfiguration: TemplateConfigStagingZipArtifact::staging.json
-                TemplatePath: InfrastructureRepoSourceArtifact::stacks/root.yml
+                StackName: !Ref StagingCloudFormationStackName
+                ParameterOverrides: !Sub |
+                  {
+                    # These are the parameters of cdn/dovetail-cdn.yml
+                    "OriginBucket": "${OriginBucket}",
+                    "OriginPath": "${OriginPath}",
+                    "DistributionDomain": "${DistributionDomain}",
+                    "CertificateArn": "${CertificateArn}",
+                    "LambdaFunctionArn": "${StitchLambdaFunctionArn}",
+                    "LambdaBytesFunctionArn": "${BytesLambdaFunctionArn}",
+                    "InfrastructureNotificationsStackName": "${InfrastructureNotificationsStackName}"
+                  }
+                TemplatePath: InfrastructureRepoSourceArtifact::cdn/dovetail-cdn.yml
               InputArtifacts:
-                # - Name: TemplateConfigStagingZipArtifact
-                # - Name: InfrastructureRepoSourceArtifact
-                # - Name: RepoStateArtifact
+                - Name: InfrastructureRepoSourceArtifact
               RunOrder: 1
-
+            # TODO Generate delta and send notification
+            - Name: ExecuteStagingChangeSet
+              ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Provider: CloudFormation
+                Version: "1"
+              Configuration:
+                ActionMode: CHANGE_SET_EXECUTE
+                Capabilities: CAPABILITY_IAM
+                ChangeSetName: !Sub ${AWS::StackName}StagingChangeSet
+                RoleArn: !GetAtt CloudFormationIamRole.Arn
+                StackName: !Ref StagingCloudFormationStackName
+              RunOrder: 2
         - Name: Testing
           Actions:
             - Name: Acceptance
@@ -183,6 +228,77 @@ Resources:
               OutputArtifacts:
                 - Name: AcceptanceTestArtifact
               RunOrder: 1
+        - Name: Production
+          Actions:
+            - Name: CreateChangeSet
+              ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Provider: CloudFormation
+                Version: "1"
+              Configuration:
+                ActionMode: CHANGE_SET_REPLACE
+                Capabilities: CAPABILITY_IAM
+                ChangeSetName: !Sub ${AWS::StackName}ProductionChangeSet
+                ParameterOverrides: !Sub |
+                  {
+                    # These are the parameters of cdn/dovetail-cdn.yml
+                    "OriginBucket": "${OriginBucket}",
+                    "OriginPath": "${OriginPath}",
+                    "DistributionDomain": "${DistributionDomain}",
+                    "CertificateArn": "${CertificateArn}",
+                    "LambdaFunctionArn": "${StitchLambdaFunctionArn}",
+                    "LambdaBytesFunctionArn": "${BytesLambdaFunctionArn}",
+                    "InfrastructureNotificationsStackName": "${InfrastructureNotificationsStackName}"
+                  }
+                RoleArn: !GetAtt CloudFormationIamRole.Arn
+                StackName: !Ref ProductionCloudFormationStackName
+                TemplatePath: InfrastructureRepoSourceArtifact::cdn/dovetail-cdn.yml
+              InputArtifacts:
+                - Name: InfrastructureRepoSourceArtifact
+              RunOrder: 2
+            - Name: ApproveChangeSet
+              ActionTypeId:
+                Category: Approval
+                Owner: AWS
+                Provider: Manual
+                Version: "1"
+              Configuration:
+                # NotificationArn: !Ref CodePipelineApprovalsSnsTopic
+                CustomData: {}
+              RunOrder: 3
+            - Name: ExecuteChangeSet
+              ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Provider: CloudFormation
+                Version: "1"
+              Configuration:
+                ActionMode: CHANGE_SET_EXECUTE
+                Capabilities: CAPABILITY_IAM
+                ChangeSetName: !Sub ${AWS::StackName}ProductionChangeSet
+                RoleArn: !GetAtt CloudFormationIamRole.Arn
+                StackName: !Ref ProductionCloudFormationStackName
+              RunOrder: 4
+  PipelineInfrastructureRepoGitHubWebhook:
+    Type: AWS::CodePipeline::Webhook
+    Properties:
+      Authentication: GITHUB_HMAC
+      AuthenticationConfiguration:
+        SecretToken: !Ref GitHubWebhookSecret
+      Filters:
+        - JsonPath: "$.ref"
+          # Properties from the target action configuration can be included as
+          # placeholders in this value by surrounding the action configuration
+          # key with curly braces. For example, if the value supplied here is
+          # "refs/heads/{Branch}" and the target action has an action
+          # configuration property called "Branch" with a value of "master",
+          # the MatchEquals value will be evaluated as "refs/heads/master".
+          MatchEquals: "refs/heads/{Branch}"
+      RegisterWithThirdParty: true
+      TargetAction: InfrastructureRepo
+      TargetPipeline: !Ref Pipeline
+      TargetPipelineVersion: !GetAtt Pipeline.Version
   PipelineMetaRepoGitHubWebhook:
     Type: AWS::CodePipeline::Webhook
     Properties:
@@ -276,8 +392,18 @@ Resources:
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
       TimeoutInMinutes: 5
-  # CloudFormation Pipeline Actions
+  # CloudFormation Pipeline
   CloudFormationIamRole:
+    # This role gets passed to CloudFormation, and is used by CloudFormation to
+    # to perform actions against other AWS resources.
+    #
+    # This is the role used to launch the root stack, and thus all nested app
+    # and service stacks. It needs permissions to create any of the resources
+    # that those stacks require. Eg, if a stack nested in the root stack
+    # includes an S3 bucket resource, this role needs a policy that allows it
+    # to create S3 buckets.
+    # NOTE This role should not be given to anything other than the CodePipeline
+    # CloudFormation actions! It's very powerful!
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
@@ -291,3 +417,53 @@ Resources:
               - sts:AssumeRole
       Path: "/"
       Policies:
+        # Wildcard access to CloudFormation stack and changesets for the
+        # staging and producton Dovetail stacks. Explicitly denies stack
+        # deletion.
+        - PolicyName: StackManipulationPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              #
+              - Effect: Allow
+                Action:
+                  - "cloudformation:*"
+                Resource:
+                  - !Sub "arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/${StagingCloudFormationStackName}/*"
+                  # TODO turn this on only when it's safe
+                  # - !Sub "arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/${ProductionCloudFormationStackName}/*"
+                  - !Sub "arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:changeSet/*"
+              - Effect: Deny
+                Action:
+                  - "cloudformation:DeleteStack"
+                Resource: "*"
+        # These are permissions for the services that are needed to create
+        # resources defined in the resources that cdn/dovetail-cdn.yml
+        # Currently:
+        # - CloudFront distribution
+        # - CloudWatch alarms
+        - PolicyName: CloudFrontPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "cloudfront:Create*"
+                  - "cloudfront:Get*"
+                  - "cloudfront:List*"
+                  - "cloudfront:Untag*"
+                  - "cloudfront:Update*"
+                  - "cloudfront:Tag*"
+                Resource: "*"
+        - PolicyName: CloudWatchAlarmsPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "cloudwatch:DeleteAlarms"
+                  - "cloudwatch:DescribeAlarms"
+                  - "cloudwatch:DisableAlarmActions"
+                  - "cloudwatch:EnableAlarmActions"
+                  - "cloudwatch:PutMetricAlarm"
+                Resource: "*"
