Fix artifact store reference

--- a/etc/dovetail-edge-deploy.yml
+++ b/etc/dovetail-edge-deploy.yml
@@ -358,7 +358,7 @@ Resources:
                   - s3:GetObject
                   - s3:GetObjectVersion
                 Effect: Allow
-                Resource: !Sub arn:aws:s3:::${ArtifactStore}/*
+                Resource: !Sub arn:aws:s3:::${PipelineArtifactStore}/*
         - PolicyName: ParameterStorePolicy
           PolicyDocument:
             Version: "2012-10-17"
