Remove Dovetail pipeline source webhooks

--- a/etc/dovetail-edge-deploy.yml
+++ b/etc/dovetail-edge-deploy.yml
@@ -280,44 +280,44 @@ Resources:
                 RoleArn: !GetAtt CloudFormationIamRole.Arn
                 StackName: !Ref ProductionCloudFormationStackName
               RunOrder: 4
-  PipelineInfrastructureRepoGitHubWebhook:
-    Type: AWS::CodePipeline::Webhook
-    Properties:
-      Authentication: GITHUB_HMAC
-      AuthenticationConfiguration:
-        SecretToken: !Ref GitHubWebhookSecret
-      Filters:
-        - JsonPath: "$.ref"
-          # Properties from the target action configuration can be included as
-          # placeholders in this value by surrounding the action configuration
-          # key with curly braces. For example, if the value supplied here is
-          # "refs/heads/{Branch}" and the target action has an action
-          # configuration property called "Branch" with a value of "master",
-          # the MatchEquals value will be evaluated as "refs/heads/master".
-          MatchEquals: "refs/heads/{Branch}"
-      RegisterWithThirdParty: true
-      TargetAction: InfrastructureRepo
-      TargetPipeline: !Ref Pipeline
-      TargetPipelineVersion: !GetAtt Pipeline.Version
-  PipelineMetaRepoGitHubWebhook:
-    Type: AWS::CodePipeline::Webhook
-    Properties:
-      Authentication: GITHUB_HMAC
-      AuthenticationConfiguration:
-        SecretToken: !Ref GitHubWebhookSecret
-      Filters:
-        - JsonPath: "$.ref"
-          # Properties from the target action configuration can be included as
-          # placeholders in this value by surrounding the action configuration
-          # key with curly braces. For example, if the value supplied here is
-          # "refs/heads/{Branch}" and the target action has an action
-          # configuration property called "Branch" with a value of "master",
-          # the MatchEquals value will be evaluated as "refs/heads/master".
-          MatchEquals: "refs/heads/{Branch}"
-      RegisterWithThirdParty: true
-      TargetAction: MetaRepo
-      TargetPipeline: !Ref Pipeline
-      TargetPipelineVersion: !GetAtt Pipeline.Version
+  # PipelineInfrastructureRepoGitHubWebhook:
+  #   Type: AWS::CodePipeline::Webhook
+  #   Properties:
+  #     Authentication: GITHUB_HMAC
+  #     AuthenticationConfiguration:
+  #       SecretToken: !Ref GitHubWebhookSecret
+  #     Filters:
+  #       - JsonPath: "$.ref"
+  #         # Properties from the target action configuration can be included as
+  #         # placeholders in this value by surrounding the action configuration
+  #         # key with curly braces. For example, if the value supplied here is
+  #         # "refs/heads/{Branch}" and the target action has an action
+  #         # configuration property called "Branch" with a value of "master",
+  #         # the MatchEquals value will be evaluated as "refs/heads/master".
+  #         MatchEquals: "refs/heads/{Branch}"
+  #     RegisterWithThirdParty: true
+  #     TargetAction: InfrastructureRepo
+  #     TargetPipeline: !Ref Pipeline
+  #     TargetPipelineVersion: !GetAtt Pipeline.Version
+  # PipelineMetaRepoGitHubWebhook:
+  #   Type: AWS::CodePipeline::Webhook
+  #   Properties:
+  #     Authentication: GITHUB_HMAC
+  #     AuthenticationConfiguration:
+  #       SecretToken: !Ref GitHubWebhookSecret
+  #     Filters:
+  #       - JsonPath: "$.ref"
+  #         # Properties from the target action configuration can be included as
+  #         # placeholders in this value by surrounding the action configuration
+  #         # key with curly braces. For example, if the value supplied here is
+  #         # "refs/heads/{Branch}" and the target action has an action
+  #         # configuration property called "Branch" with a value of "master",
+  #         # the MatchEquals value will be evaluated as "refs/heads/master".
+  #         MatchEquals: "refs/heads/{Branch}"
+  #     RegisterWithThirdParty: true
+  #     TargetAction: MetaRepo
+  #     TargetPipeline: !Ref Pipeline
+  #     TargetPipelineVersion: !GetAtt Pipeline.Version
   # Acceptance Test Pipeline Action
   AcceptanceTestsCodeBuildIamRole:
     Type: AWS::IAM::Role
