--- a/stacks/serverless/cms-audio-lambda.yml
+++ b/stacks/serverless/cms-audio-lambda.yml
@@ -80,6 +80,7 @@ Resources:
         Variables:
           DESTINATION_BUCKET: !Ref DestinationBucketName
           FFPROBE_PATH: bin/ffprobe
+          MPCK_PATH: bin/mpck
           SQS_CALLBACK: !Sub https://sqs.${AWS::Region}.amazonaws.com/${AWS::AccountId}/${SqsCallbackName}
       Handler: index.handler
       MemorySize: 512
