--- a/db/castle-postgres-instance.yml
+++ b/db/castle-postgres-instance.yml
@@ -86,6 +86,7 @@ Parameters:
   DBPassword:
     Type: String
     Description: Postgres master user password
+    NoEcho: true
   VPCStackName:
     Type: String
     Description: VPC stack to launch the database into
@@ -104,7 +105,7 @@ Resources:
       AllocatedStorage: !Ref StorageSize
       AllowMajorVersionUpgrade: false
       AutoMinorVersionUpgrade: false
-      BackupRetentionPeriod: 7
+      BackupRetentionPeriod: "7"
       CopyTagsToSnapshot: true
       DBInstanceClass: !Ref InstanceClass
       DBInstanceIdentifier: !Ref InstanceIdentifier
@@ -144,11 +145,11 @@ Resources:
       Family: postgres11
       Parameters:
         shared_preload_libraries: "pg_stat_statements,auto_explain"
-        auto_explain.log_min_duration: 10000
-        auto_explain.log_timing: 1
+        auto_explain.log_min_duration: "10000"
+        auto_explain.log_timing: "1"
         pg_stat_statements.track: "ALL"
-        track_activity_query_size: 4096
-        track_io_timing: 1
+        track_activity_query_size: "4096"
+        track_io_timing: "1"
       Tags:
         - Key: Project
           Value: castle.prx.org
