Also retain security group

--- a/db/castle-postgres-instance.yml
+++ b/db/castle-postgres-instance.yml
@@ -181,6 +181,7 @@ Resources:
           Value: !Ref AWS::StackId
   CastleVPCSecurityGroup:
     Type: "AWS::EC2::SecurityGroup"
+    DeletionPolicy: Retain
     Properties:
       GroupName: !Sub Castle${EnvironmentType}Postgres11
       GroupDescription: !Sub Castle ${EnvironmentType} Postgres11 Security Group
