Add explicit host header listener rule

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -83,6 +83,8 @@ Parameters:
   # Remix Specific ###############################################################
   RemixPlatformALBListenerPriorityPrefix:
     Type: String
+  RemixPlatformALBExplicitListenerPriorityPrefix:
+    Type: String
   RemixSecretsVersion:
     Type: String
   RemixEcrImageTag:
@@ -373,9 +375,11 @@ Resources:
         ContainerMemoryReservation: !Ref ContainerMemoryReservation
         ContainerCpu: !Ref ContainerCpu
         PlatformALBListenerPriorityPrefix: !Ref RemixPlatformALBListenerPriorityPrefix
+        PlatformALBExplicitListenerPriorityPrefix: !Ref RemixPlatformALBExplicitListenerPriorityPrefix
         EcrImageTag: !Ref RemixEcrImageTag
         SecretsVersion: !Ref RemixSecretsVersion
         AppName: "remix"
+        ExplicitHostHeader: "prx.mx"
         CreateWorker: "true"
         DesiredWorkersProduction: "0"
         DesiredWorkers: "0"
