--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -186,8 +186,10 @@ Mappings:
       prefix: 50
     Augury:
       prefix: 55
-    Remix:
+    RemixExplicit:
       prefix: 60
+    Remix:
+      prefix: 61
 Resources:
   # Root stacks
   StaticSitesRootStack:
@@ -326,6 +328,7 @@ Resources:
         JingleSecretsVersion: !Ref JingleSecretsVersion
         # Remix
         RemixPlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Remix, prefix]
+        RemixPlatformALBExplicitListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, RemixExplicit, prefix]
         RemixEcrImageTag: !Ref RemixEcrImageTag
         RemixSecretsVersion: !Ref RemixSecretsVersion
       Tags:
