Switch to non-db-requiring path

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -132,7 +132,7 @@ Resources:
         DesiredWorkersProduction: "6"
         ErrorAlarmThreshold: "5"
         ContainerPort: "3000"
-        HealthCheckPath: "/"
+        HealthCheckPath: "/ping"
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
