Move prx.mx from heroku to ecs

--- a/dns/prx.mx-hosted_zone.yml
+++ b/dns/prx.mx-hosted_zone.yml
@@ -34,7 +34,7 @@ Resources:
             # us-east-1 hosted zone ID
             HostedZoneId: Z3AQBSTGFYJSTF
         - ResourceRecords:
-            - www.prx.mx.herokudns.com.
+            - remix.prx.tech.
           TTL: "300"
           Type: CNAME
           Name: !Sub www.${Domain}
