Enable versioning on support bucket

--- a/storage/storage.yml
+++ b/storage/storage.yml
@@ -23,7 +23,7 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       VersioningConfiguration:
-        Status: Suspended
+        Status: Enabled
   InfrastructureSourceBucket:
     Type: "AWS::S3::Bucket"
     DeletionPolicy: Retain
