Add S3 version support to CI Lambdas

--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -75,6 +75,15 @@ Parameters:
     Description: >
       The Parameter Store key for the log group retention policy function's
       ARN (not the ARN itself)
+  # Lambda code S3 versions
+  CiStatusNotificationHandlerLambdaFunctionS3ObjectVersion:
+    Type: String
+  GitHubWebhookEndpointLambdaFunctionS3ObjectVersion:
+    Type: String
+  GitHubEventHandler2LambdaFunctionS3ObjectVersion:
+    Type: String
+  CodeBuildCallbackHandlerLambdaFunctionS3ObjectVersion:
+    Type: String
 Resources:
   # CodeBuild Project
   CiCodeBuildSourceArchiveBucket:
@@ -366,6 +375,7 @@ Resources:
           Fn::ImportValue:
             !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
         S3Key: "ci/ci-status-notification-handler.zip"
+        S3ObjectVersion: !Ref CiStatusNotificationHandlerLambdaFunctionS3ObjectVersion
       Description: >
         Handles status notifications for CI builds
       Environment:
@@ -480,6 +490,7 @@ Resources:
           Fn::ImportValue:
             !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
         S3Key: ci/github-webhook-endpoint.zip
+        S3ObjectVersion: !Ref GitHubWebhookEndpointLambdaFunctionS3ObjectVersion
       Description: Backs the GitHub webhook payload requests endpoint
       Environment:
         Variables:
@@ -605,6 +616,7 @@ Resources:
           Fn::ImportValue:
             !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
         S3Key: ci/github-event-handler2.zip
+        S3ObjectVersion: !Ref GitHubEventHandler2LambdaFunctionS3ObjectVersion
       Description: Handles GitHub events forwarded from the endpoint
       Environment:
         Variables:
@@ -752,6 +764,7 @@ Resources:
           Fn::ImportValue:
             !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
         S3Key: ci/codebuild-callback-handler.zip
+        S3ObjectVersion: !Ref CodeBuildCallbackHandlerLambdaFunctionS3ObjectVersion
       Description: Handles post-build callbacks from CodeBuild CI projects
       Environment:
         Variables:
