Add prx.mx to VPC certificate

--- a/stacks/certificate.yml
+++ b/stacks/certificate.yml
@@ -26,6 +26,7 @@ Resources:
         - "*.staging.prxu.org"
         - "*.prx.tech"
         - "*.staging.prx.tech"
+        - "*.prx.mx"
         - !Sub "*.cdn.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech"
       Tags:
         - Key: Project
