Relax the Upload duration alarm slightly

--- a/stacks/serverless/upload.prx.org.yml
+++ b/stacks/serverless/upload.prx.org.yml
@@ -250,9 +250,9 @@ Resources:
       OKActions:
         - !Ref OpsErrorMessagesSnsTopicArn
       AlarmDescription:
-        At least one invocation duration exceeded 225ms
+        At least one invocation duration exceeded 225ms in consecutive periods
       ComparisonOperator: GreaterThanThreshold
-      EvaluationPeriods: 1
+      EvaluationPeriods: 2
       MetricName: Duration
       Namespace: AWS/Lambda
       Period: 60
