--- a/dns/prx.mx-hosted_zone.yml
+++ b/dns/prx.mx-hosted_zone.yml
@@ -38,3 +38,34 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub www.${Domain}
+  Text:
+    Type: "AWS::Route53::RecordSetGroup"
+    Properties:
+      # Route53 expects TXT record values to be enclosed in double quotes, so in
+      # the YAML they need to be double-quoted.
+      # Each domain name should only have a single text record. Add multiple
+      # resource records if necessary.
+      # All SPF records need to go into a single resource record.
+      Comment: TXT Records
+      HostedZoneId: !Ref HostedZone
+      RecordSets:
+        - ResourceRecords:
+            - '"google-site-verification=NC8qzXNet75Y23pcYiJDrUWuR9iHVhe4jtX7_3_-bhc"'
+          TTL: "300"
+          Type: TXT
+          Name: !Ref Domain
+  GSuite:
+    Type: "AWS::Route53::RecordSetGroup"
+    Properties:
+      Comment: G Suite
+      HostedZoneId: !Ref HostedZone
+      RecordSets:
+        - ResourceRecords:
+            - "1 ASPMX.L.GOOGLE.COM."
+            - "5 ALT1.ASPMX.L.GOOGLE.COM."
+            - "5 ALT2.ASPMX.L.GOOGLE.COM."
+            - "10 ASPMX2.GOOGLEMAIL.COM."
+            - "10 ASPMX3.GOOGLEMAIL.COM."
+          TTL: "300"
+          Type: MX
+          Name: !Ref Domain
