Add ACM DNS validation to prx.mx

--- a/dns/prx.mx-hosted_zone.yml
+++ b/dns/prx.mx-hosted_zone.yml
@@ -38,6 +38,22 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub www.${Domain}
+  Aws:
+    Type: "AWS::Route53::RecordSetGroup"
+    Properties:
+      Comment: AWS ACM, etc
+      HostedZoneId: !Ref HostedZone
+      RecordSets:
+        - ResourceRecords:
+            - _a1223e715b9fc43c557b8daf3fa0df78.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _27bbc5f87c001a6920754062a0e9b5cf.${Domain}
+        - ResourceRecords:
+            - _aea5801b5cb705095b04dc4371193ffc.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _bd387aa4bcceb75e21fd7829da00c1f6.www.${Domain}
   Text:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
