Add ACM DNS validation to radiotopia.com

--- a/dns/radiotopia.com-hosted_zone.yml
+++ b/dns/radiotopia.com-hosted_zone.yml
@@ -70,3 +70,19 @@ Resources:
           TTL: "300"
           Type: MX
           Name: !Ref Domain
+  Aws:
+    Type: "AWS::Route53::RecordSetGroup"
+    Properties:
+      Comment: AWS ACM, etc
+      HostedZoneId: !Ref HostedZone
+      RecordSets:
+        - ResourceRecords:
+            - _fa9fe6a08ee0195675ecafb06004fa84.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _f79ddcfb3f0b225f0be20cb614b97c74.${Domain}
+        - ResourceRecords:
+            - _fdcf4011594cf3db9d53770ce91c1a1c.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _47a8401b0245e2927391b0045ba815a0.www.${Domain}
