Use DNS validation for wildcard certificate

--- a/etc/wildcard-certificate.yml
+++ b/etc/wildcard-certificate.yml
@@ -25,6 +25,7 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
+      ValidationMethod: DNS
 Outputs:
   CertificateArn:
     Description: The ARN for the wildcard certificate
