Add ACM DNS validation to prx.org

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -1617,3 +1617,14 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub k1._domainkey.${Domain}
+  Aws:
+    Type: "AWS::Route53::RecordSetGroup"
+    Properties:
+      Comment: AWS ACM, etc
+      HostedZoneId: !Ref HostedZone
+      RecordSets:
+        - ResourceRecords:
+            - _3be53bb29ca3174c2bf7d3af1ba8138d.ltfvzjuylp.acm-validations.aws.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub _81a7e2b5cf0c4f79d7188da0f03ae72d.${Domain}
